[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amcx"
version = "0.1.0"
description = "Adaptive Memory Chunk X - A library for efficient memory chunking"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "hacko223"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/hacko223/adaptive-memory-chunk-x"
Repository = "https://github.com/hacko223/adaptive-memory-chunk-x.git"
